welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: value update is not a member of java.awt.Color
    getCouleurSol()= Color.green
    ^